objects/cwbtool__UserFilterPreference__c.object
<CustomObject>
    <fields>
        <fullName>cwbtool__ComponentType__c</fullName>
        <label>Component Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Filter__c</fullName>
        <label>Filter</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__UserID__c</fullName>
        <label>User ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>User Filter Preference</label>
    <nameField>
        <displayFormat>Filter-{0000}</displayFormat>
        <label>User Filter Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Filter Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>